tests/baselines/reference/tsxFragmentErrors.errors.txt
file.tsx(1,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
file.tsx(9,7): error TS2304: Cannot find name 'div'.
file.tsx(9,7): error TS17015: Expected corresponding closing tag for JSX fragment.
file.tsx(9,11): error TS17014: JSX fragment has no corresponding closing tag.
file.tsx(11,17): error TS1005: '</' expected.


==== file.tsx (5 errors) ====
    declare module JSX {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	interface Element { }
    	interface IntrinsicElements {
    		[s: string]: any;
    	}
    }
    declare var React: any;
    
    <>hi</div> // Error
          ~~~
!!! error TS2304: Cannot find name 'div'.
          ~~~
!!! error TS17015: Expected corresponding closing tag for JSX fragment.
              ~~~~~~~~~
    
    
    <>eof   // Error
    ~~
!!! error TS17014: JSX fragment has no corresponding closing tag.
                    
!!! error TS1005: '</' expected.